# Shrimp-Tracker

./: .gitignore  CMakeLists.txt  DecisionTree.py  README.md  SettingsSaver.py  Shrimp.py  ShrimpApp.py  TrackWindow.py  crop.py  detector.py  kalman_filter.py  kalman_filter_acceleration.py  main.py  run.sh  setup.py  tracer.py  tracker.py  utils.py
Circle_Detection/: CircleDetectorApp.py  __init__.py  circle_crop.py  hough_circle.py  pradalier.py
src/: ceres_shrimp.cpp  elliptic_shrimp.cpp
